--- a/components.css
+++ b/components.css
@@ -1019,8 +1019,7 @@ header {
   }
 } */
 
-/* services page */
-.services__header {
+.header {
   display: grid;
   align-items: end;
   min-height: 90vh;
@@ -1039,7 +1038,25 @@ header {
   background-position: center;
 }
 
-.header-title {
+.header--services {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 50%,
+      rgba(0, 0, 0, 1)
+    ),
+    url("./assets/images/services__img.webp");
+}
+
+/* .header--about {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 50%,
+      rgba(0, 0, 0, 1)
+    ),
+    url("./assets/images/");
+} */
+
+.header__title {
   --color: rgba(var(--neutral) / 1);
   margin-inline: clamp(1.5rem, 7vw, 3rem);
   margin-bottom: 2.7778rem;
@@ -1049,6 +1066,8 @@ header {
 
   border-bottom: 4px solid var(--color);
 }
+
+/* services page */
 
 .services__type-image {
   aspect-ratio: 1 / 1.14;
@@ -1206,19 +1225,73 @@ header {
     display: flex;
     margin-top: unset;
   }
+}
 
-  /* .portfolio__text-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  } */
+/* portfolio page */
+.header--portfolio {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 50%,
+      rgba(0, 0, 0, 1)
+    ),
+    url("./assets/images/portfolio__img.webp");
 
-  /* .portfolio__btn {
-    display: none;
+  /* adjust this */
+  background-position: left 50% top 35%;
+}
+
+.gallery__grid {
+  --gap: 1.2em;
+  --columns: 1;
+  display: column;
+  columns: var(--columns);
+  gap: var(--gap);
+}
+
+.gallery__grid > * {
+  break-inside: avoid;
+  margin-bottom: var(--gap);
+}
+
+.gallery__grid img {
+  object-fit: cover;
+  aspect-ratio: 4/5;
+}
+
+.featured-img {
+  aspect-ratio: 9/16;
+}
+
+.background-video {
+  width: 100%;
+  aspect-ratio: 1;
+}
+
+.video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* need a feature class */
+
+/* getting the images in 3 different size */
+/* one is perfect square */
+/* one is 9/16 */
+/* one is 1/2 */
+
+@media (min-width: 600px) {
+  .gallery__grid {
+    --columns: 2;
   }
 
-  .portfolio__btn--desktop {
-    display: block;
-  } */
+  .background-video {
+    aspect-ratio: 16/10;
+  }
+}
+
+@media (min-width: 900px) {
+  .gallery__grid {
+    --columns: 3;
+  }
 }
