ADD | 11ty and nunjucks setup done

--- a/public/style.css
+++ b/public/style.css
@@ -1085,13 +1085,16 @@ header {
 
 .hero-header__title {
   --color: rgba(var(--neutral) / 1);
-  margin-inline: clamp(1.5rem, 7vw, 3rem);
+  position: relative;
   margin-bottom: 2.7778rem;
-
-  font-size: clamp(3.157rem, 10vw, 10rem);
+  font-size: clamp(3.5rem, 10vw, 10rem);
   color: var(--color);
+}
 
-  border-bottom: 4px solid var(--color);
+@media (min-width: 1396px) {
+  .hero-header__title {
+    margin-inline: auto;
+  }
 }
 
 /* search: services page */
@@ -1191,7 +1194,7 @@ header {
   }
 }
 
-.services .portfolio__title {
+.services-page .portfolio__title {
   text-align: initial;
 }
 
@@ -1405,6 +1408,7 @@ header {
   .container--reasons {
     flex-direction: row-reverse;
     height: 100%;
+    padding-inline: clamp(1.5rem, 7vw, 3rem);
   }
 
   /* when the element's position is set to sticky, it would make its parent a sticky container, that allow the element itself to stick within the parent's space */
@@ -1417,6 +1421,7 @@ header {
 
   .reasons__main {
     flex: 1;
+    padding-inline: unset;
   }
 
   .reasons__side {
