--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -4,13 +4,13 @@
     <section class="footer-section">
       <ul class="footer-section__list">
         <li class="footer-section__item">
-          <a href="/services_page.html">Services</a>
+          <a href="/service">Services</a>
         </li>
         <li class="footer-section__item">
-          <a href="/portfolio_page.html">Portfolio</a>
+          <a href="/portfolio">Portfolio</a>
         </li>
         <li class="footer-section__item">
-          <a href="/about_page.html">About Me</a>
+          <a href="/about">About Me</a>
         </li>
       </ul>
     </section>
@@ -18,17 +18,17 @@
       <ul class="footer-section__list socials__list">
         <li class="footer-section__item">
           <a href="#" class="socials__link instagram">
-            <img src="../assets/svg/instagram.svg" alt="Connect with me on Instagram">
+            <img src="/assets/svg/instagram.svg" alt="Connect with me on Instagram">
           </a>
         </li>
         <li class="footer-section__item">
           <a href="#" class="socials__link messenger">
-            <img src="../assets/svg/messenger.svg" alt="Connect with me on Messenger">
+            <img src="/assets/svg/messenger.svg" alt="Connect with me on Messenger">
           </a>
         </li>
         <li class="footer-section__item">
           <a href="#" class="socials__link whatsapp">
-            <img src="../assets/svg/whatsapp.svg" alt="Connect with me on Whatsapp">
+            <img src="/assets/svg/whatsapp.svg" alt="Connect with me on Whatsapp">
           </a>
         </li>
       </ul>
