--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -8,13 +8,13 @@
       </section>
       <ul class="navbar__list">
         <li class="navbar__item">
-          <a href="/services_page.html">Services</a>
+          <a href="/services">Services</a>
         </li>
         <li class="navbar__item">
-          <a href="/portfolio_page.html">Portfolio</a>
+          <a href="/portfolio">Portfolio</a>
         </li>
         <li class="navbar__item">
-          <a href="/about_page.html">About Me</a>
+          <a href="/about">About Me</a>
         </li>
       </ul>
     </div>
@@ -33,13 +33,13 @@
     <ul class="container inline-padding menu">
       <div class="menu__container">
         <li class="menu__item">
-          <a href="/services_page.html">Services</a>
+          <a href="/services">Services</a>
         </li>
         <li class="menu__item">
-          <a href="/portfolio__page.html">Portfolio</a>
+          <a href="/portfolio">Portfolio</a>
         </li>
         <li class="menu__item">
-          <a href="/about_page.html">About Me</a>
+          <a href="/about">About Me</a>
         </li>
       </div>
     </ul>
