--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,10 +1,10 @@
-<footer class="footer container inline-padding">
+<footer id="contact" class="footer container inline-padding">
   <hr class="footer__line">
   <div class="footer__container">
     <section class="footer-section">
       <ul class="footer-section__list">
         <li class="footer-section__item">
-          <a href="/service">Services</a>
+          <a href="/services">Services</a>
         </li>
         <li class="footer-section__item">
           <a href="/portfolio">Portfolio</a>
