--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -16,6 +16,9 @@
         <li class="navbar__item">
           <a href="/about">About Me</a>
         </li>
+        <li class="navbar__item">
+          <a href="#contact">Contact Me</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -40,6 +43,9 @@
         </li>
         <li class="menu__item">
           <a href="/about">About Me</a>
+        </li>
+        <li class="menu__item">
+          <a href="#contact">Contact Me</a>
         </li>
       </div>
     </ul>
